# NexusAI

./: .gitignore  README.md
.github/workflows/: main.yml
backend/: .env.example  Dockerfile  drop_db.py  requirements.txt
backend/app/: __init__.py  celery_app.py  deps.py  main.py  tasks.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  ai_tutor.py  analytics.py  auth.py  courses.py  health.py  quizzes.py  recommendations.py  sync.py  users.py
backend/app/api/websockets/: cv_alerts.py
backend/app/application/services/: ai_analytics_service.py  ai_tutor_service.py  auth_service.py  recommendation_service.py
backend/app/core/: config.py  security.py
backend/app/infrastructure/: database.py
backend/app/infrastructure/models/: __init__.py  academic.py  ai_data.py  analytics.py  assessment.py  base.py  exam.py  institution.py  profile.py  sync.py  user.py
backend/app/schemas/: auth.py  user.py
backend/scripts/: create_db.py  seed.py
cpp-engine/: CMakeLists.txt
cpp-engine/bindings/: CMakeLists.txt  nexus_ai_bindings.cpp
cpp-engine/cv-monitor/: CMakeLists.txt
cpp-engine/cv-monitor/include/: cv_monitor.hpp
cpp-engine/cv-monitor/src/: alert_scorer.cpp  cv_monitor.cpp  face_detector.cpp  gaze_tracker.cpp  phone_detector.cpp
cpp-engine/embedding-engine/: CMakeLists.txt
cpp-engine/embedding-engine/include/: embedder.hpp
cpp-engine/embedding-engine/src/: embedder.cpp  vector_index.cpp
cpp-engine/inference-engine/: CMakeLists.txt
cpp-engine/inference-engine/include/: inference_engine.hpp
cpp-engine/inference-engine/src/: inference_engine.cpp  model_loader.cpp  quantization_utils.cpp
cpp-engine/optimization/: CMakeLists.txt
cpp-engine/optimization/include/: memory_pool.hpp  simd_utils.hpp  thread_pool.hpp
cpp-engine/optimization/include/nexus/: optimization.hpp
cpp-engine/optimization/src/: memory_pool.cpp  simd_utils.cpp  thread_pool.cpp
cpp-engine/recommendation-engine/: CMakeLists.txt
cpp-engine/recommendation-engine/include/: recommender.hpp
cpp-engine/recommendation-engine/src/: adaptive_engine.cpp  collaborative_filter.cpp  recommender.cpp
cpp-engine/sync-engine/: CMakeLists.txt
cpp-engine/sync-engine/include/: sync_manager.hpp
cpp-engine/sync-engine/src/: conflict_resolver.cpp  sync_manager.cpp
docker/: docker-compose.yml
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: architecture.md
frontend/: Dockerfile  build_output.txt  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx
frontend/src/app/dashboard/admin/: page.tsx
frontend/src/app/dashboard/admin/ai-monitor/: page.tsx
frontend/src/app/dashboard/admin/analytics/: page.tsx
frontend/src/app/dashboard/admin/institutions/: page.tsx
frontend/src/app/dashboard/admin/revenue/: page.tsx
frontend/src/app/dashboard/admin/system-health/: page.tsx
frontend/src/app/dashboard/admin/users/: page.tsx
frontend/src/app/dashboard/student/: page.tsx
frontend/src/app/dashboard/student/ai-tutor/: page.tsx
frontend/src/app/dashboard/student/analytics/: page.tsx
frontend/src/app/dashboard/student/courses/: page.tsx
frontend/src/app/dashboard/student/practice-exams/: page.tsx
frontend/src/app/dashboard/student/quizzes/: page.tsx
frontend/src/app/dashboard/teacher/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AITutor.tsx  AuthGuard.tsx  ErrorBoundary.tsx  SyncManager.tsx
frontend/src/components/ui/: ChartCard.tsx  DashboardLayout.tsx  PageSkeleton.tsx  StatCard.tsx  Toaster.tsx
frontend/src/hooks/: useOfflineSync.ts
frontend/src/lib/: api.ts
frontend/src/store/: useAppStore.ts
infrastructure/k8s/: backend-deployment.yaml  frontend-deployment.yaml  postgres-statefulset.yaml
scripts/: setup_dev.py
(+11 files in other folders)
